# libmodbus

./: .gitignore  CMakeLists.txt
cmake/: modbusConfig.cmake.in
src/: config.h  modbus-tcp.c  modbus.h
